--- a/rust-compressor/Cargo.toml
+++ b/rust-compressor/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2024"
 authors = ["onelrian"]
 description = "A compression tool implementing LZ77 and RLE algorithms"
 
+[[bin]]
+name = "compressor"
+path = "src/main.rs"
+
 [dependencies]
 clap = { version = "4.4", features = ["derive"] }
 anyhow = "1.0"
